Fix menu aligned right for button in navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
  */
 
+/*To make the menu bar appear aligned right*/
+.mdl-navigation {
+  position: relative !important;
+}
+
 .comment-text-container {
   min-height: 60px;
   display: block;
